--- a/front-End/index.html
+++ b/front-End/index.html
@@ -171,9 +171,8 @@ e profissional sem complicações.</p>
 <strong><i>&copy; 2025 Desenvolvido por LS Soluções.Todos os direitos reservados.</i></strong>
 
 </footer>
-
-<script src="script.js"></script>
-
+  
+<script src="script.js" type="module"></script>
 </body>
 
 </html>
