--- a/front-End/index.html
+++ b/front-End/index.html
@@ -172,6 +172,9 @@ e profissional sem complicações.</p>
 
 </footer>
   
+<script>
+  window.SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFoeW5jcmpjZ3FpdXlqdmFocWlhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDExMDU2NTgsImV4cCI6MjA1NjY4MTY1OH0.0G5TsGLPm-qq0O_iqnpOeZhSuaDFVITqpHzC-3dq1LU';
+</script>
 <script src="script.js" type="module"></script>
 </body>
 
